# yuuagents

./: .gitignore  AGENTS.md  API.md  CLAUDE.md  PLAN.md  README.md  config.example.yaml  config.overrides.example.yaml  pyproject.toml
design/: dashboard.md  design.md  flow.md  persistent.md  refactor.md
dev-docs/: 01-项目功能与最佳实践.md  02-核心概念与模块动机.md  README.md
examples/: README.md  getting_started.py  sdk_quickstart.py  simple_start.py
src/yuuagents/: __init__.py  agent.py  basin.py  capabilities.py  cli_entry.py  config.default.yaml  config.py  context.py  flow.py  init.py  input.py  local.py  loop.py  persistence.py  pool.py  running_tools.py  runtime_session.py  service_requirements.py  session.py  step.py  task_host.py  types.py
src/yuuagents/cli/: __init__.py  client.py  main.py  service.py
src/yuuagents/core/: __init__.py  flow.py
src/yuuagents/daemon/: __init__.py  api.py  background_cli.py  docker.py  manager.py  runtime.Dockerfile  server.py
src/yuuagents/prompts/: __init__.py  background_cli.md
src/yuuagents/skills/: __init__.py  discovery.py
src/yuuagents/tools/: __init__.py  bash.py  control.py  delegate.py  file.py  read_skill.py  running.py  session_tools.py  skill_cli.py  sleep.py  todo.py  user_input.py  view_image.py  web.py
tests/: __init__.py  test_agent.py  test_api.py  test_cli_docker_check.py  test_cli_dotenv.py  test_config.py  test_context.py  test_delegate_tools.py  test_docker.py  test_docker_manager.py  test_file_tools.py  test_flow.py  test_init.py  test_integration.py  test_local_api.py  test_persistence.py  test_readme_architecture.py  test_running_tools.py  test_service_entry.py  test_skills.py  test_tools.py  test_trace_llm_items.py  test_types.py
