[project]
name = "yuuagents"
version = "0.1.0"
description = "Minimal agent framework: Persona + Tools + LLM with CLI and dashboard"
readme = "README.md"
authors = [
    { name = "Tomorrowdawn", email = "tomorrowdawn@mail.ustc.edu.cn" }
]
requires-python = ">=3.14"
dependencies = [
    # Internal
    "yuutools>=0.1.0",
    "yuullm>=0.3.0", #big api change.
    "yuutrace>=0.1.0",
    # Data & types
    "attrs>=24.2.0",
    "msgspec>=0.19.0",
    # Daemon
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    # CLI
    "click>=8.0",
    # CLI -> Daemon communication + web_fetch
    "httpx>=0.27.0",
    # Docker
    "aiodocker>=0.23.0",
    # Web search
    "tavily-python>=0.5.0",
    # Logging
    "loguru>=0.7.0",
]

[project.scripts]
yagents = "yuuagents.cli.main:cli"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
