[project]
name = "yuuagents"
version = "0.2.0"
description = "Agent runtime with SDK imports, bundled CLI, optional daemon bootstrap, and built-in tools"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Tomorrowdawn", email = "tomorrowdawn@mail.ustc.edu.cn" }
]
requires-python = ">=3.14"
keywords = ["agents", "llm", "runtime", "cli", "sdk"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    # Internal
    "yuutools>=0.1.0",
    "yuullm>=0.7.0",
    "yuutrace>=0.1.8", #big api change
    # Data & types
    "attrs>=24.2.0",
    "msgspec>=0.19.0",
    # Bundled CLI / daemon bootstrap runtime
    "aiosqlite>=0.21.0",
    "click>=8.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
docker = [
    "aiodocker>=0.23.0",
]
web = [
    "tavily-python>=0.5.0",
]
all = [
    "aiodocker>=0.23.0",
    "tavily-python>=0.5.0",
]

[project.scripts]
yagents = "yuuagents.cli_entry:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
    "types-pyyaml>=6.0.12.20250915",
]
examples = [
    "rich>=13.0.0",
]

[tool.mypy]
python_version = "3.14"

[tool.uv.sources]
yuullm = { workspace = true }
yuutrace = { workspace = true }
yuutools = { workspace = true }
